--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
 
+.clearfix::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
 .container {
     width: 1240px;
     margin: auto;
@@ -180,4 +186,68 @@ nav {
 .jumbotron-content p {
     margin-bottom: 15px;
     line-height: 1.6;
+}
+
+.jumbo-description{
+    padding-bottom: 48px;
+    padding-top: 48px;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.description-left{
+    float: left;
+    width: 50%;
+}
+
+.description-left img{
+    border-radius: 10px 0 0 10px;
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
+}
+
+.description-right{
+    float: left;
+    max-width: 41.666667%;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.description-right h2{
+    margin-bottom: 48px;
+    font-size: 35.2px;
+    color: #727272;
+}
+
+.description-right h2 span{
+    color: #64DE82;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 35.2px;
+    line-height: 1.2;
+    text-align: left;
+}
+
+.description-content{
+    border-bottom: 1px solid #dee2e6;
+    margin-bottom: 24px;
+    font-size: 18px;
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: 400;
+    color: #727272;
+    line-height: 1.5;
+    text-align: left;
+}
+
+.description-content h3{
+    color: #001A4F;
+    font-size: 24px;
+}
+
+.description-content p{
+    margin-bottom: 24px;
 }
