--- a/style.css
+++ b/style.css
@@ -243,6 +243,10 @@ nav {
     text-align: left;
 }
 
+.description-content:last-child{
+    border-bottom: none;
+}
+
 .description-content h3{
     color: #001A4F;
     font-size: 24px;
@@ -250,4 +254,58 @@ nav {
 
 .description-content p{
     margin-bottom: 24px;
+}
+
+.jumbo-necessity{
+    margin-top: 3rem;
+    padding-top: 3rem;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.jumbo-necessity .container h2{
+    margin-bottom: 3rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 2.2rem;
+    text-align: center;
+    color: #727272;
+}
+
+.necessity-content{
+    float: left;
+    width: 33%;
+    margin-bottom: 3rem;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.necessity-content img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
+}
+
+.necessity-content h3{
+    color: #001A4F;
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-bottom: .5rem;
+    line-height: 1.2;
+    text-align: center;
+}
+
+.necessity-content p{
+    margin-top: 0;
+    margin-bottom: 1rem;
+    text-align: center;
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: 400;
+    color: #727272;
+    line-height: 1.5;
 }
